--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,16 +6,31 @@
 
 body {
   font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 p {
   margin: 15px 0;
   line-height: 1.8;
+  text-align: left;
+}
+
+pfooter {
+  padding-left: 20px;
+  color: rgb(251, 250, 250);
 }
 
 a {
   text-decoration: none;
   color: rgb(251, 250, 250);
+}
+
+
+pageIntro {
+  color: #000000;
+  font-size: 25px;
+  font-weight: 800;
 }
 
 img {
@@ -26,8 +41,8 @@ img {
 header {
   background: steelblue;
   color: #fff;
-  padding: 5px;
-  margin-bottom: 40px;
+  padding: 0px;
+  margin-bottom: 0px;
 }
 
 header a {
@@ -36,14 +51,14 @@ header a {
 
 .container {
   max-width: 768px;
-  margin: auto;
+  margin: 0;
   overflow: auto;
-  padding: 0 10px;
+  padding: 0 0px;
 }
 
-.btn {
+.btnDoc {
   display: inline-block;
-  background: #8d4b9c;
+  background: #6400FF;;
   color: #fff;
   border: none;
   padding: 8px 16px;
@@ -51,7 +66,26 @@ header a {
   cursor: pointer;
   text-decoration: none;
   font-size: 15px;
-  font-family: inherit;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  opacity: 1;
+  margin-left: 12px;
+}
+
+.btn {
+  display: inline-block;
+  background: #6400FF;;
+  color: #fff;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  width: 100%;
+  text-align: center;
+  opacity: 1;
 }
 
 .btn:focus {
@@ -63,24 +97,55 @@ header a {
 }
 
 .btn-back {
-  background: #ae75a5;
+  
+  background: #6400FF;
   color: rgb(255, 255, 255);
   margin-top: 5px;
   margin-left: 5px;
   margin-bottom: 20px;
 }
 
+.btn-half {
+
+  display: inline-block;
+  background: #6400FF;;
+  color: #fff;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  opacity: 1;
+  margin-left: 12px;
+  width: 40%;
+}
+
 .posts {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 30px;
-  margin-top: 30px;
+  margin-top: 0px;
+}
+
+
+.blackCard {
+  padding: 15px;
+  margin: 0px 0;
+  border-radius: 20px;
+  box-shadow: 0px 0px 0px 2px #6400FF;
+  font-family: 'Arial', sans-serif;
+  text-align: center; 
 }
 
 .card {
   padding: 15px;
   border-radius: 20px;
-  box-shadow: 0 8px 8px 0 rgba(139, 10, 161, 0.2);
+  box-shadow: 0 4px 8px 0 #6400FF;
+  font-family: 'Arial', sans-serif;
+  text-align: center;
 }
 
 .card-page {
@@ -102,18 +167,177 @@ ol {
   font-size: 110%;
   line-height: 2.3;
   font-weight: bold;
-  margin: 10px 0;
+  margin: 0px 0;
 }
 
 .post-body pre {
   background: #f4f4f4;
-  padding: 20px;
-  margin: 20px 0;
+  padding: 0px;
+  margin: 0px 0;
   line-height: 2.3;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 700px) {
   .posts {
+    align-items: center;
+    margin-top: auto;
+    margin-bottom: 50px;
     grid-template-columns: 1fr;
+    width: 100%;
+    padding: 20px;
+    flex-direction: column;
   }
+}
+
+
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&display=swap');
+
+
+a{
+  text-decoration: none;
+  color: inherit;
+}
+
+header{
+  position: sticky;
+  z-index: 30;
+  top: 0;
+  margin: 0;
+}
+
+nav{
+  display: flex;
+  padding: 0px;
+  padding-left: 100px;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #6400FF;
+  margin: 0;
+}
+.nav__menu-bar{
+  display: flex;
+  flex-direction: column;
+  row-gap: 6px;
+  cursor: pointer;
+  margin: 0;
+}
+.nav__menu-bar div{
+  width: 40px;
+  height: 4px;
+  background-color: rgb(255, 253, 253);
+  border-radius: 2px;
+}
+.nav__menu-list{
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  top: 60px;
+  width: 288px;
+  row-gap: 24px;
+  right: -288px;
+  padding: 24px 16px;
+  transition: all 0.2s;
+  min-height: calc(100vh - 60px);
+  background-color: #6400FF;
+}
+.nav__menu-list.active{
+  right: 0;
+}
+.nav__link{
+  font-size: 18px; 
+  position: relative;
+  transition: all 0.2s;
+}
+
+.nav__link:hover{
+ font-weight: bold;
+}
+
+.center{
+  min-height: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+@media screen and (min-width: 768px) {
+  .nav__menu-bar{
+    display: none;
+  }
+  .nav__menu-list{
+    position: unset;
+    flex-direction: row;
+    min-height: fit-content;
+    width: fit-content;
+    column-gap: 24px;
+    align-items: center;
+  }
+  .nav__link::before{
+    content: '';
+    position: absolute;
+    width: 0%;
+    height: 6px;
+    bottom: -16px;
+    left: 0;
+    background-color: black;
+    transition: all 0.2s;
+  }
+  
+  .nav__link:hover:before{
+   width: 100%;
+  }
+}
+
+
+/* Style The Dropdown Button */
+.dropbtn {
+  background-color:  #6400FF;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  opacity: 0.9;
+  position: relative;
+  left: 1100%;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  left: 1100%;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  background-color:  #6400FF;
+  opacity: 0.5;
 }
