--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,12 +15,30 @@ p {
   text-align: left;
 }
 
+.p-home {
+  margin: 15px 0;
+  line-height: 1.4;
+  text-align: center;
+  color: #000;
+  opacity: 0.7;
+  font-size: 18px;
+}
+
+.p-home-small {
+  margin: 15px 0;
+  line-height: 1.4;
+  text-align: center;
+  color: #000;
+  opacity: 0.7;
+  font-size: 16px;
+}
+
 pfooter {
   padding-left: 20px;
   color: rgb(251, 250, 250);
 }
 
-a-big {
+.a-big {
   position: relative;
   color: rgb(251, 250, 250);
   padding-right: 57%;
@@ -30,13 +48,55 @@ a-big {
 }
 
 
+.h1 {
+  color:#6400FF;
+  opacity: 0.9;
+  font-size: 35px;
+  font-family: 'Arial', sans-serif;
+}
+
+.h2-custom {
+  color:#6400FF;
+  opacity: 0.8;
+  font-size: 22px;
+  padding-top: 5px;
+  font-family: 'Arial', sans-serif;
+}
+
+.h3-custom {
+  color:#6400FF;
+  opacity: 0.8;
+  font-size: 18px;
+  font-weight: bold;
+  font-family: 'Arial', sans-serif;
+}
+
+
+.h1-first {
+  color:#6400FF;
+  opacity: 0.9;
+  font-size: 35px;
+  padding-top: 5%;
+  text-align: left;
+  font-family: 'Arial', sans-serif;
+}
+
+.h1-custom {
+  color:#6400FF;
+  opacity: 0.9;
+  font-size: 35px;
+  padding-top: 5%;
+  text-align: center;
+  font-family: 'Arial', sans-serif;
+}
+
 a {
   text-decoration: none;
   color: rgb(251, 250, 250);
 }
 
 
-pageIntro {
+.pageIntro {
   color: #000000;
   font-size: 25px;
   font-weight: 800;
@@ -44,6 +104,11 @@ pageIntro {
 
 img {
   width: 100%;
+  border-radius: 10px;
+}
+
+.small-img {
+  width: 50%;
   border-radius: 10px;
 }
 
@@ -62,14 +127,84 @@ header a {
 
 .container {
   max-width: 768px;
+  text-align: center;
+  display:flex;
+  justify-content: center;
   margin: 0;
   overflow: auto;
   padding: 0 0px;
 }
 
+.in-container {
+  margin: 0;
+  overflow: auto;
+  display:flexbox;
+  text-align: center;
+  justify-content: center;
+  padding-top: 2%;
+  padding-right: 10%;
+  padding-left: 10%;
+  font-family: 'Arial', sans-serif;
+}
+
+.small-container {
+  margin: 0;
+  overflow: auto;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  padding-right: 33%;
+  padding-left: 33%;
+  font-family: 'Arial', sans-serif;
+}
+
+.smaller-container {
+  margin: 0;
+  overflow: auto;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  padding-right: 42%;
+  padding-left: 42%;
+  font-family: 'Arial', sans-serif;
+}
+
+.container-carousel {
+  margin: 0;
+  overflow: auto;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  padding-right: 10%;
+  padding-left: 10%;
+  font-family: 'Arial', sans-serif;
+}
+
+.row-padded-element {
+  margin: 0;
+  overflow: auto;
+  justify-content: center;
+  display: flex;
+  text-align: center;
+  padding-top: 10%;
+  width: 100%;
+}
+
+.row-element {
+  margin: 0;
+  overflow: auto;
+  justify-content: center;
+  display: flex;
+  text-align: center;
+  padding-top: 0;
+  width: 100%;
+}
+
 .btnDoc {
   display: inline-block;
-  background: #6400FF;;
+  background: #6400FF;
   color: #fff;
   border: none;
   padding: 8px 16px;
@@ -126,7 +261,6 @@ header a {
 }
 
 .btn-half {
-
   display: inline-block;
   background: #6400FF;;
   color: #fff;
@@ -140,12 +274,53 @@ header a {
   text-align: center;
   opacity: 1;
   margin-left: 12px;
-  width: 40%;
+  width: 30%;
 }
 
 .posts {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+  margin-top: 0px;
+  width: 100%;
+  padding: 25px;
+}
+
+
+.one-post {
+  display:grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 30px;
+  margin-top: 0px;
+  align-items: center;
+  width: 100%;
+  padding: 25px;
+}
+
+.two-posts {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 30px;
+  margin-top: 0px;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding: 25px;
+}
+
+.three-posts {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 100px;
+  margin-top: 0px;
+  width: 100%;
+  padding: 25px;
+}
+
+
+.four-posts {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
   gap: 30px;
   margin-top: 0px;
   width: 100%;
@@ -166,6 +341,15 @@ header a {
   padding: 15px;
   border-radius: 0px;
   box-shadow: 0 0px 0px 2px #6400FF;
+  font-family: 'Arial', sans-serif;
+  text-align: center;
+}
+
+.home-card {
+  padding: 15px;
+  border-radius: 0px;
+  justify-content: center;
+  box-shadow: 0 0px 0px 0px #6400FF;
   font-family: 'Arial', sans-serif;
   text-align: center;
 }
@@ -202,7 +386,42 @@ ol {
 
 
 
-@media (max-width: 700px) {
+@media (max-width: 780px) {
+
+  .in-container {
+  margin: 0;
+  overflow: auto;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  padding-top: 0%;
+  padding-right: 5%;
+  padding-left: 5%;
+  font-family: 'Arial', sans-serif;
+  }
+
+  .small-container {
+  margin: 0;
+  overflow: auto;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  padding-top: 2%;
+  padding-right: 5%;
+  padding-left: 5%;
+  font-family: 'Arial', sans-serif;
+  }
+
+  .home-card {
+    padding: 5%;
+    border-radius: 0px;
+    justify-content: center;
+    box-shadow: 0 0px 0px 0px #6400FF;
+    font-family: 'Arial', sans-serif;
+    text-align: center;
+  }
+
+
   .posts {
     align-items: center;
     margin-top: auto;
@@ -212,6 +431,47 @@ ol {
     padding: 5%;
     flex-direction: column;
   }
+
+  .two-posts {
+    align-items: center;
+    margin-top: auto;
+    margin-bottom: 50px;
+    grid-template-columns: 1fr;
+    width: 85%;
+    padding: 5%;
+    flex-direction: column;
+  }
+
+  .three-posts {
+    align-items: center;
+    margin-top: auto;
+    margin-bottom: 50px;
+    grid-template-columns: 1fr;
+    width: 85%;
+    padding: 5%;
+    flex-direction: column;
+  }
+
+  .four-posts {
+    align-items: center;
+    margin-top: auto;
+    margin-bottom: 50px;
+    grid-template-columns: 1fr;
+    width: 85%;
+    padding: 5%;
+    flex-direction: column;
+  }
+
+  .nav{
+    display: flex;
+    padding: 0px;
+    padding-left: 5%;
+    padding-right: 5%;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #6400FF;
+    margin: 0;
+}
 }
 
 
@@ -307,7 +567,6 @@ nav{
     display: none;
   }
 
-  
 }
 
 
