--- a/styles/globals.css
+++ b/styles/globals.css
@@ -85,7 +85,7 @@ pfooter {
   color:#6400FF;
   opacity: 0.9;
   font-size: 35px;
-  padding-top: 5%;
+  padding-top: 10%;
   text-align: center;
   font-family: 'Arial', sans-serif;
 }
@@ -109,7 +109,6 @@ img {
 
 .small-img {
   width: 50%;
-  border-radius: 10px;
 }
 
 header {
@@ -141,7 +140,7 @@ header a {
   display:flexbox;
   text-align: center;
   justify-content: center;
-  padding-top: 2%;
+  padding-top: 0%;
   padding-right: 10%;
   padding-left: 10%;
   font-family: 'Arial', sans-serif;
@@ -171,6 +170,18 @@ header a {
   font-family: 'Arial', sans-serif;
 }
 
+.smallest-container {
+  margin: 0;
+  overflow: auto;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  padding-right: 45%;
+  padding-left: 45%;
+  opacity: 0.6;
+  font-family: 'Arial', sans-serif;
+}
+
 .container-carousel {
   margin: 0;
   overflow: auto;
@@ -188,7 +199,7 @@ header a {
   justify-content: center;
   display: flex;
   text-align: center;
-  padding-top: 10%;
+  padding-top: 0%;
   width: 100%;
 }
 
@@ -202,12 +213,22 @@ header a {
   width: 100%;
 }
 
+.arrow-container {
+  margin: 0;
+  overflow: auto;
+  justify-content: space-between;
+  display: flex;
+  text-align: center;
+  padding-top: 0;
+  width: 100%;
+}
+
 .btnDoc {
   display: inline-block;
-  background: #6400FF;
   color: #fff;
   border: none;
-  padding: 8px 16px;
+  padding: 16px;
+  margin: 10px;
   border-radius: 5px;
   cursor: pointer;
   text-decoration: none;
@@ -339,8 +360,8 @@ header a {
 
 .card {
   padding: 15px;
-  border-radius: 0px;
-  box-shadow: 0 0px 0px 2px #6400FF;
+  border-radius: 5px;
+  box-shadow: 1px 2px 4px 1px #6400FF;
   font-family: 'Arial', sans-serif;
   text-align: center;
 }
@@ -355,6 +376,7 @@ header a {
 }
 
 .card-page {
+  display: flex;
   padding: 15px 30px;
 }
 
