--- a/styles/globals.css
+++ b/styles/globals.css
@@ -111,6 +111,16 @@ pfooter {
   font-family: 'Arial', sans-serif;
 }
 
+.h1-carousel {
+  color:#000000;
+  font-weight: bold;
+  opacity: 0.9;
+  font-size: 35px;
+  padding-top: 10%;
+  text-align: center;
+  font-family: 'Arial', sans-serif;
+}
+
 a {
   text-decoration: none;
   color: rgb(251, 250, 250);
@@ -164,6 +174,18 @@ header a {
   padding-top: 0%;
   padding-right: 10%;
   padding-left: 10%;
+  font-family: 'Arial', sans-serif;
+}
+
+.img-container {
+  margin: 0;
+  overflow: auto;
+  display: flexbox;
+  text-align: center;
+  justify-content: center;
+  padding-top: 0%;
+  padding-right: 20%;
+  padding-left: 20%;
   font-family: 'Arial', sans-serif;
 }
 
@@ -454,6 +476,10 @@ ol {
     font-family: 'Arial', sans-serif;
   }
 
+  .h1-carousel {
+    display: none;
+  }
+
   .small-container {
     margin: 0;
     overflow: auto;
@@ -488,20 +514,19 @@ ol {
 
   .two-posts {
     align-items: center;
-    margin-top: auto;
+    margin-top: 100px;
     margin-bottom: 50px;
     grid-template-columns: 1fr;
     width: 85%;
     padding: 5%;
-    flex-direction: column;
+    flex-direction: column-reverse;
   }
 
   .three-posts {
     align-items: center;
     margin-top: auto;
-    margin-bottom: 50px;
     grid-template-columns: 1fr;
-    width: 85%;
+    width: 100%;
     padding: 5%;
     flex-direction: column;
   }
@@ -509,9 +534,8 @@ ol {
   .four-posts {
     align-items: center;
     margin-top: auto;
-    margin-bottom: 50px;
     grid-template-columns: 1fr;
-    width: 85%;
+    width: 100%;
     padding: 5%;
     flex-direction: column;
   }
@@ -521,10 +545,10 @@ ol {
     position: relative;
     margin-top: auto;
     margin-bottom: 50px;
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(2, 1fr);
     width: 85%;
     padding: 5%;
-    flex-direction:column;
+    flex-direction: column;
   }
 
   .nav{
@@ -729,6 +753,7 @@ nav{
   color: white;
   padding: 24px;
   font-size: 16px;
+  min-width: 80px;
   border: none;
   cursor: pointer;
 }
@@ -743,7 +768,7 @@ nav{
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 100px;
+  min-width: 80px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
@@ -767,4 +792,12 @@ nav{
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .bigdropdown:hover .bigdropbtn {
   background-color: #cb5dd1;
+}
+
+
+@media (max-width: 780px) {
+    .carousel {
+      width:auto;
+      height:auto;
+    }
 }
