--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,7 @@
 .container {
   padding: 0 0rem;
   padding-top: 0;
+  margin: 0;
 }
 
 .main {
@@ -128,3 +129,4 @@
     filter: invert(1);
   }
 }
+
