--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,6 @@
+/* ------------------------ general style -------------------------- */
+/* --------- text, titles, body, headers, etc. --------------------- */
+
 * {
   margin: 0;
   padding: 0;
@@ -133,15 +136,6 @@ a {
   font-weight: 800;
 }
 
-img {
-  width: 100%;
-  border-radius: 10px;
-}
-
-.small-img {
-  width: 50%;
-}
-
 header {
   background: #6400FF;
   color: #fff;
@@ -154,6 +148,22 @@ header a {
   color: #fff;
   margin: 0;
 }
+
+/* ------------------------ images -------------------------- */
+
+
+img {
+  width: 100%;
+  border-radius: 10px;
+}
+
+.small-img {
+  width: 50%;
+}
+
+
+/* ---------------------- containers -------------------------- */
+
 
 .container {
   
@@ -266,80 +276,7 @@ header a {
   width: 100%;
 }
 
-.btnDoc {
-  display: inline-block;
-  color: #fff;
-  border: none;
-  padding: 16px;
-  margin: 10px;
-  border-radius: 5px;
-  cursor: pointer;
-  text-decoration: none;
-  font-size: 15px;
-  font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
-  opacity: 1;
-  margin-left: 12px;
-}
-
-.btn {
-  display:inline-block;
-  background: #6400FF;
-  color: #fff;
-  margin: 5px;
-  padding-right: 10px;
-  border-radius: 10px;
-  cursor: pointer;
-  text-decoration: none;
-  font-size: 16px;
-  font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
-}
-
-
-.imgbtn {
-  display:inline-flex;
-  background: #6400FF;
-  color: #fff;
-  margin: 0px;
-  padding-right: 10px;
-  padding-top: 10px;
-  cursor: pointer;
-  text-align: center;
-}
-
-.btn:focus {
-  outline: none;
-}
-
-.btn:hover {
-  transform: scale(0.98);
-}
-
-.btn-back {
-  background: #6400FF;
-  color: rgb(255, 255, 255);
-  margin-top: 5px;
-  margin-left: 5px;
-  margin-bottom: 20px;
-}
-
-.btn-half {
-  display: inline-block;
-  background: #6400FF;;
-  color: #fff;
-  border: none;
-  padding: 8px 16px;
-  border-radius: 5px;
-  cursor: pointer;
-  text-decoration: none;
-  font-size: 15px;
-  font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
-  opacity: 1;
-  margin-left: 12px;
-  width: 30%;
-}
+/* ---------------------- cards and posts -------------------------- */
 
 .posts {
   display: grid;
@@ -453,257 +390,96 @@ ol {
   font-size: 110%;
   line-height: 2.3;
   font-weight: bold;
-  text-align: center;
-  display: flex;
-  width: 100%;
   margin: 0px 0;
 }
 
 .post-body pre {
   background: #f4f4f4;
   padding: 0px;
-  align-items: center;
-  text-align: left;
   margin: 0px 0;
-  width: 100%;
   line-height: 2.3;
 }
 
 
+/* ------------------------ buttons ------------------------ */
 
 
-@media (max-width: 780px) {
-
-  .in-container {
-    margin: 0;
-    overflow: auto;
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    padding-top: 0%;
-    padding-right: 5%;
-    padding-left: 5%;
-    font-family: 'Arial', sans-serif;
-  }
-
-  .h1-carousel {
-    display: none;
-  }
-
-  .small-container {
-    margin: 0;
-    overflow: auto;
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    padding-top: 2%;
-    padding-right: 5%;
-    padding-left: 5%;
-    font-family: 'Arial', sans-serif;
-  }
-
-  .home-card {
-    padding: 0%;
-    border-radius: 0px;
-    justify-content: center;
-    box-shadow: 0 0px 0px 0px #6400FF;
-    font-family: 'Arial', sans-serif;
-    text-align: center;
-  }
-
-
-  .posts {
-    align-items: center;
-    margin-top: auto;
-    margin-bottom: 50px;
-    grid-template-columns: 1fr;
-    width: 77%;
-    padding: 5%;
-    flex-direction: column;
-  }
-
-  .two-posts {
-    align-items: center;
-    margin-top: 100px;
-    margin-bottom: 50px;
-    grid-template-columns: 1fr;
-    width: 85%;
-    padding: 5%;
-    flex-direction: column-reverse;
-  }
-
-  .three-posts {
-    align-items: center;
-    margin-top: auto;
-    grid-template-columns: 1fr;
-    width: 100%;
-    padding: 5%;
-    flex-direction: column;
-  }
-
-  .four-posts {
-    align-items: center;
-    margin-top: auto;
-    grid-template-columns: 1fr;
-    width: 100%;
-    padding: 5%;
-    flex-direction: column;
-  }
-
-  .eight-posts {
-    align-items: center;
-    position: relative;
-    margin-top: auto;
-    margin-bottom: 50px;
-    grid-template-columns: repeat(2, 1fr);
-    width: 85%;
-    padding: 5%;
-    flex-direction: column;
-  }
-
-  .nav{
-    display: flex;
-    padding: 0px;
-    padding-left: 5%;
-    padding-right: 5%;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #6400FF;
-    margin: 0;
-  }
-}
-
-
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&display=swap');
-
-
-a{
-  text-decoration: none;
-  color: inherit;
-}
-
-header{
-  position: sticky;
-  z-index: 30;
-  top: 0;
-  margin: 0;
-  padding: 0;
-  margin-top: 0%;
-}
-
-nav{
-  display: flex;
-  padding-left: 11.5%;
-  padding-right: 11.5%;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #6400FF;
-  margin: 0;
-  padding-top: 0;
-  padding-bottom: 0;
-}
-
-
-.nav__menu-bar{
-  display: flex;
-  flex-direction: column;
-  row-gap: 6px;
+.btnDoc {
+  display: inline-block;
+  color: #fff;
+  border: none;
+  padding: 16px;
+  margin: 10px;
+  border-radius: 5px;
   cursor: pointer;
-  margin: 0;
+  text-decoration: none;
+  font-size: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  opacity: 1;
+  margin-left: 12px;
+}
+
+.btn {
+  display:inline-block;
+  background: #6400FF;
+  color: #fff;
+  margin: 5px;
+  padding-right: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+}
+
+.imgbtn {
+  display:inline-flex;
+  background: #6400FF;
+  color: #fff;
+  margin: 0px;
+  padding-right: 10px;
+  padding-top: 10px;
+  cursor: pointer;
+  text-align: center;
+}
+
+.btn:focus {
+  outline: none;
+}
+
+.btn:hover {
+  transform: scale(0.98);
+}
+
+.btn-back {
+  background: #6400FF;
+  color: rgb(255, 255, 255);
+  margin-top: 5px;
+  margin-left: 5px;
+  margin-bottom: 20px;
+}
+
+.btn-half {
+  display: inline-block;
+  background: #6400FF;;
+  color: #fff;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  opacity: 1;
+  margin-left: 12px;
+  width: 30%;
 }
 
 
-.nav__menu-bar div{
-  width: 40px;
-  height: 4px;
-  background-color: rgb(255, 253, 253);
-  border-radius: 2px;
-}
-
-
-.nav__menu-list{
-  display: flex;
-  flex-direction: column;
-  position: fixed;
-  top: 60px;
-  width: 188px;
-  row-gap: 24px;
-  right: -288px;
-  padding: 24px 16px;
-  transition: all 0.2s;
-  min-height: calc(100vh - 60px);
-  background-color: #6400FF;
-}
-
-
-.nav__menu-list.active{
-  right: 0;
-}
-
-
-.nav__link{
-  font-size: 18px; 
-  position: relative;
-  transition: all 0.2s;
-}
-
-.nav__link:hover{
- font-weight: bold;
-}
-
-.center{
-  min-height: 600px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-
-@media screen and (max-width: 780px) {
-  .btn {
-    display: none;
-  }
-  .dropbtn {
-    display: none;
-  }
-
-}
-
-
-@media screen and (min-width: 780px) {
-  .nav__menu-bar{
-    display: none;
-  }
-  .nav__menu-list{
-    position: unset;
-    flex-direction: row;
-    min-height: fit-content;
-    right: 10%;
-    width: fit-content;
-    column-gap: 24px;
-    align-items: center;
-  }
-  .nav__link::before{
-    content: '';
-    position: absolute;
-    width: 0%;
-    height: 6px;
-    bottom: -16px;
-    left: 0;
-    background-color: black;
-    transition: all 0.2s;
-  }
-  
-  .nav__link:hover:before{
-   width: 100%;
-  }
-
-  .bigdropbtn{
-    display: none;
-  }
-
-}
-
+/* ----------------------- drop buttons ----------------------*/
 
 /* Style The Dropdown Button */
 .dropbtn {
@@ -805,44 +581,256 @@ nav{
 }
 
 
+
+/* -------------------------- navbar ------------------------ */
+
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&display=swap');
+
+a{
+  text-decoration: none;
+  color: inherit;
+}
+
+header{
+  position: sticky;
+  z-index: 30;
+  top: 0;
+  margin: 0;
+  padding: 0;
+  margin-top: 0%;
+}
+
+nav{
+  display: flex;
+  padding-left: 11.5%;
+  padding-right: 11.5%;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #6400FF;
+  margin: 0;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.nav__menu-bar{
+  display: flex;
+  flex-direction: column;
+  row-gap: 6px;
+  cursor: pointer;
+  margin: 0;
+}
+
+.nav__menu-bar div{
+  width: 40px;
+  height: 4px;
+  background-color: rgb(255, 253, 253);
+  border-radius: 2px;
+}
+
+.nav__menu-list{
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  top: 60px;
+  width: 188px;
+  row-gap: 24px;
+  right: -288px;
+  padding: 24px 16px;
+  transition: all 0.2s;
+  min-height: calc(100vh - 60px);
+  background-color: #6400FF;
+}
+
+.nav__menu-list.active{
+  right: 0;
+}
+
+.nav__link{
+  font-size: 18px; 
+  position: relative;
+  transition: all 0.2s;
+}
+
+.nav__link:hover{
+ font-weight: bold;
+}
+
+.center{
+  min-height: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+/* -------------------- @media for small screen -------------- */
+/* -------------- the small view must be customized ---------- */
+
+
 @media (max-width: 780px) {
-    .carousel {
-      width:auto;
-      height:auto;
-    }
+
+  .in-container {
+    margin: 0;
+    overflow: auto;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    padding-top: 0%;
+    padding-right: 5%;
+    padding-left: 5%;
+    font-family: 'Arial', sans-serif;
+  }
+
+  .h1-carousel {
+    display: none;
+  }
+
+  .small-container {
+    margin: 0;
+    overflow: auto;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    padding-top: 2%;
+    padding-right: 5%;
+    padding-left: 5%;
+    font-family: 'Arial', sans-serif;
+  }
+
+  .home-card {
+    padding: 0%;
+    border-radius: 0px;
+    justify-content: center;
+    box-shadow: 0 0px 0px 0px #6400FF;
+    font-family: 'Arial', sans-serif;
+    text-align: center;
+  }
+
+  .posts {
+    align-items: center;
+    margin-top: auto;
+    margin-bottom: 50px;
+    grid-template-columns: 1fr;
+    width: 77%;
+    padding: 5%;
+    flex-direction: column;
+  }
+
+  .two-posts {
+    align-items: center;
+    margin-top: 100px;
+    margin-bottom: 50px;
+    grid-template-columns: 1fr;
+    width: 85%;
+    padding: 5%;
+    flex-direction: column-reverse;
+  }
+
+  .three-posts {
+    align-items: center;
+    margin-top: auto;
+    grid-template-columns: 1fr;
+    width: 100%;
+    padding: 5%;
+    flex-direction: column;
+  }
+
+  .four-posts {
+    align-items: center;
+    margin-top: auto;
+    grid-template-columns: 1fr;
+    width: 100%;
+    padding: 5%;
+    flex-direction: column;
+  }
+
+  .eight-posts {
+    align-items: center;
+    position: relative;
+    margin-top: auto;
+    margin-bottom: 50px;
+    grid-template-columns: repeat(2, 1fr);
+    width: 85%;
+    padding: 5%;
+    flex-direction: column;
+  }
+
+  .nav{
+    display: flex;
+    padding: 0px;
+    padding-left: 5%;
+    padding-right: 5%;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #6400FF;
+    margin: 0;
+  }
+
+  .btn {
+    display: none;
+  }
+
+  .dropbtn {
+    display: none;
+  }
+
+  .carousel {
+    width:auto;
+    height:auto;
+  }
 }
 
 
-.code {
-  font: 12px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
-  color: #52595d;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
-  border: 1px solid #ccc;
-  background-color: #f9f9f9;
-  padding: 0px 3px;
-  display: inline-block;
-  margin: 0px;
+/* --------------------- @media for big screen --------------- */
+/* -------- some buttons must disappear in laptop mode ------- */
+
+
+@media screen and (min-width: 780px) {
+  .nav__menu-bar{
+    display: none;
+  }
+  .nav__menu-list{
+    position: unset;
+    flex-direction: row;
+    min-height: fit-content;
+    right: 10%;
+    width: fit-content;
+    column-gap: 24px;
+    align-items: center;
+  }
+  .nav__link::before{
+    content: '';
+    position: absolute;
+    width: 0%;
+    height: 6px;
+    bottom: -16px;
+    left: 0;
+    background-color: black;
+    transition: all 0.2s;
+  }
+  
+  .nav__link:hover:before{
+   width: 100%;
+  }
+
+  .bigdropbtn{
+    display: none;
+  }
 }
 
 
-.pre {
-  border: 1px solid #cacaca;
-  line-height: 1.2em;
-  font: 12px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
-  padding: 10px;
-  overflow:auto;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
-  background-color: #FAFAFB;
-  color: #393939;
-  margin: 0px;
-}
+/* ------------------------- markdown ------------------ */
+
+.markdown-body {
+		box-sizing: border-box;
+		min-width: 200px;
+		max-width: 980px;
+		margin: 0 auto;
+		padding: 45px;
+	}
+
+	@media (max-width: 767px) {
+		.markdown-body {
+			padding: 15px;
+		}
+	}
