--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -62,7 +62,6 @@ pfooter {
   color:#6400FF;
   opacity: 0.9;
   font-size: 35px;
-  font-family: 'Roboto', sans-serif;
 }
 
 .h2-custom {
@@ -70,7 +69,6 @@ pfooter {
   opacity: 0.7;
   font-size: 22px;
   padding-top: 5px;
-  font-family: 'Roboto', sans-serif;
 }
 
 .h2-partners {
@@ -79,7 +77,6 @@ pfooter {
   font-size: 18px;
   padding-top: 10%;
   text-align: center;
-  font-family: 'Roboto', sans-serif;
 }
 
 .h3-custom {
@@ -87,7 +84,6 @@ pfooter {
   opacity: 0.8;
   font-size: 18px;
   font-weight: bold;
-  font-family: 'Roboto', sans-serif;
 }
 
 
@@ -98,7 +94,6 @@ pfooter {
   font-size: 35px;
   padding-top: 5%;
   text-align: right;
-  font-family: 'Roboto', sans-serif;
 }
 
 .h1-custom {
@@ -108,7 +103,6 @@ pfooter {
   font-size: 35px;
   padding-top: 10%;
   text-align: center;
-  font-family: 'Roboto', sans-serif;
 }
 
 .h1-carousel {
@@ -118,7 +112,6 @@ pfooter {
   font-size: 35px;
   padding-top: 10%;
   text-align: center;
-  font-family: 'Roboto', sans-serif;
 }
 
 a {
@@ -174,7 +167,6 @@ header a {
   padding-top: 0%;
   padding-right: 10%;
   padding-left: 10%;
-  font-family: 'Roboto', sans-serif;
 }
 
 .img-container {
@@ -186,7 +178,6 @@ header a {
   padding-top: 0%;
   padding-right: 20%;
   padding-left: 20%;
-  font-family: 'Roboto', sans-serif;
 }
 
 .small-container {
@@ -199,7 +190,6 @@ header a {
   padding-bottom: 2%;
   padding-right: 32%;
   padding-left: 32%;
-  font-family: 'Roboto', sans-serif;
 }
 
 .smaller-container {
@@ -210,7 +200,6 @@ header a {
   justify-content: center;
   padding-right: 44%;
   padding-left: 44%;
-  font-family: 'Roboto', sans-serif;
 }
 
 .smallest-container {
@@ -222,7 +211,6 @@ header a {
   padding-right: 45%;
   padding-left: 45%;
   opacity: 0.6;
-  font-family: 'Roboto', sans-serif;
 }
 
 .container-carousel {
@@ -233,7 +221,6 @@ header a {
   justify-content: center;
   padding-right: 10%;
   padding-left: 10%;
-  font-family: 'Roboto', sans-serif;
 }
 
 .row-padded-element {
@@ -276,7 +263,6 @@ header a {
   cursor: pointer;
   text-decoration: none;
   font-size: 15px;
-  font-family: Roboto, Roboto, sans-serif;
   text-align: center;
   opacity: 1;
   margin-left: 12px;
@@ -292,7 +278,6 @@ header a {
   cursor: pointer;
   text-decoration: none;
   font-size: 16px;
-  font-family: Roboto, Roboto, sans-serif;
   text-align: center;
 }
 
@@ -331,7 +316,6 @@ header a {
   cursor: pointer;
   text-decoration: none;
   font-size: 15px;
-  font-family: Roboto, Roboto, sans-serif;
   text-align: center;
   opacity: 1;
   margin-left: 12px;
@@ -373,8 +357,7 @@ header a {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 100px;
-  margin-top: 0px;
-  font-family: Roboto, Roboto, sans-serif;
+  margin-top: 0px;;
   width: 100%;
   padding: 25px;
 }
@@ -404,7 +387,6 @@ header a {
   margin: 0px 0;
   border-radius: 20px;
   box-shadow: 0px 0px 0px 2px #6400FF;
-  font-family: 'Roboto', sans-serif;
   text-align: center; 
 }
 
@@ -412,7 +394,6 @@ header a {
   padding: 15px;
   border-radius: 5px;
   box-shadow: 1px 2px 4px 1px #6400FF;
-  font-family: 'Roboto', sans-serif;
   text-align: center;
 }
 
@@ -421,7 +402,6 @@ header a {
   border-radius: 0px;
   justify-content: center;
   box-shadow: 0 0px 0px 0px #6400FF;
-  font-family: 'Roboto', sans-serif;
   text-align: center;
   vertical-align: middle;
   align-items: center;
@@ -481,7 +461,6 @@ ol {
     padding-top: 0%;
     padding-right: 5%;
     padding-left: 5%;
-    font-family: 'Roboto', sans-serif;
   }
 
   .h1-carousel {
@@ -497,7 +476,6 @@ ol {
     padding-top: 2%;
     padding-right: 5%;
     padding-left: 5%;
-    font-family: 'Roboto', sans-serif;
   }
 
   .home-card {
@@ -505,7 +483,6 @@ ol {
     border-radius: 0px;
     justify-content: center;
     box-shadow: 0 0px 0px 0px #6400FF;
-    font-family: 'Roboto', sans-serif;
     text-align: center;
   }
 
@@ -713,7 +690,6 @@ nav{
   font-size: 16px;
   border: none;
   cursor: pointer;
-  font-family: Roboto, Roboto, sans-serif;
 }
 
 /* The container <div> - needed to position the dropdown content */
