--- a/styles/globals.css
+++ b/styles/globals.css
@@ -291,7 +291,7 @@ header a {
   border-radius: 10px;
   cursor: pointer;
   text-decoration: none;
-  font-size: 16px;
+  font-size: 18px;
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
 }
@@ -559,6 +559,7 @@ ol {
   }
 
   .nav{
+    height: 10.5vh;
     display: flex;
     padding: 0px;
     padding-left: 5%;
@@ -590,6 +591,7 @@ header{
 
 nav{
   display: flex;
+  height: 7vh;
   padding-left: 11.5%;
   padding-right: 11.5%;
   justify-content: space-between;
@@ -664,6 +666,7 @@ nav{
     display: none;
   }
 
+
 }
 
 
@@ -709,7 +712,7 @@ nav{
   padding: 16px;
   padding-right: 10px;
   padding-left: 10px;
-  font-size: 16px;
+  font-size: 18px;
   border: none;
   cursor: pointer;
   font-family: Arial, Helvetica, sans-serif;
@@ -726,7 +729,7 @@ nav{
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 160px;
+  min-width: 143px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
@@ -759,7 +762,7 @@ nav{
   background-color: #6400FF;
   color: white;
   padding: 24px;
-  font-size: 16px;
+  font-size: 18px;
   min-width: 80px;
   border: none;
   cursor: pointer;
@@ -775,7 +778,7 @@ nav{
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 80px;
+  min-width: 20px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
