--- a/styles/globals.css
+++ b/styles/globals.css
@@ -410,6 +410,7 @@ header a {
 .card {
   padding: 15px;
   border-radius:20px;
+  width: 85%;
   box-shadow: 0px 0px 4px 2px #838383;
   font-family: 'Arial', sans-serif;
   text-align: center;
