--- a/styles/globals.css
+++ b/styles/globals.css
@@ -559,7 +559,7 @@ ol {
   }
 
   .nav{
-    height: 10.5vh;
+    height: 70px;
     display: flex;
     padding: 0px;
     padding-left: 5%;
@@ -591,7 +591,7 @@ header{
 
 nav{
   display: flex;
-  height: 7vh;
+  height: 60px;
   padding-left: 11.5%;
   padding-right: 11.5%;
   justify-content: space-between;
