--- a/styles/globals.css
+++ b/styles/globals.css
@@ -398,7 +398,7 @@ header a {
 .card {
   padding: 15px;
   border-radius: 5px;
-  box-shadow: 1px 2px 4px 1px #6400FF;
+  box-shadow: 0px 0px 4px 1px #5d5d5e;
   text-align: center;
   background: #FFF;
 }
