fixed items position and margin

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -501,6 +501,7 @@ ol {
 
   .two-posts {
     align-items: center;
+    position:relative;
     margin-top: 100px;
     margin-bottom: 50px;
     grid-template-columns: 1fr;
