same hover colors nav's buttons

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -783,7 +783,7 @@ nav{
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .bigdropdown:hover .bigdropbtn {
-  background-color: #cb5dd1;
+  background-color: #8535fd;
 }
 
 
